Свечи и чекпойнты хранятся против инструмента (canonicalInstrumentId), листинги брокеров в SQLite
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>